pkg/dsl/y.output

state 0
	$accept: .start $end 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 2
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  expression.    (1)
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	EQ  shift 24
	NE  shift 25
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	AND  shift 30
	OR  shift 31
	.  reduce 1 (src line 38)


state 3
	expression:  binary.    (2)

	.  reduce 2 (src line 45)


state 4
	expression:  unary.    (3)

	.  reduce 3 (src line 47)


state 5
	expression:  primary.    (4)

	.  reduce 4 (src line 48)


state 6
	unary:  NOT.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 32
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 7
	unary:  MINUS.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 33
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 8
	primary:  literal.    (20)

	.  reduce 20 (src line 191)


state 9
	primary:  path.    (21)
	path:  path.DOT IDENTIFIER 
	array_index:  path.LBRACKET expression RBRACKET 

	DOT  shift 34
	LBRACKET  shift 35
	.  reduce 21 (src line 193)


state 10
	primary:  call.    (22)

	.  reduce 22 (src line 194)


state 11
	primary:  array_index.    (23)

	.  reduce 23 (src line 195)


state 12
	primary:  LPAREN.expression RPAREN 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 36
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 13
	literal:  STRING.    (32)

	.  reduce 32 (src line 269)


state 14
	literal:  NUMBER.    (33)

	.  reduce 33 (src line 277)


state 15
	literal:  TRUE.    (34)

	.  reduce 34 (src line 284)


state 16
	literal:  FALSE.    (35)

	.  reduce 35 (src line 291)


state 17
	path:  DOT.IDENTIFIER 

	IDENTIFIER  shift 37
	.  error


18: shift/reduce conflict (shift 38(0), red'n 27(0)) on DOT
18: shift/reduce conflict (shift 40(0), red'n 27(0)) on LBRACKET
state 18
	path:  IDENTIFIER.    (27)
	path:  IDENTIFIER.DOT IDENTIFIER 
	call:  IDENTIFIER.LPAREN argument_list_opt RPAREN 
	array_index:  IDENTIFIER.LBRACKET expression RBRACKET 

	DOT  shift 38
	LPAREN  shift 39
	LBRACKET  shift 40
	.  reduce 27 (src line 217)


state 19
	binary:  expression PLUS.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 41
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 20
	binary:  expression MINUS.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 42
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 21
	binary:  expression MULTIPLY.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 43
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 22
	binary:  expression DIVIDE.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 44
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 23
	binary:  expression MODULO.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 45
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 24
	binary:  expression EQ.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 46
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 25
	binary:  expression NE.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 47
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 26
	binary:  expression LT.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 48
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 27
	binary:  expression LE.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 49
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 28
	binary:  expression GT.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 50
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 29
	binary:  expression GE.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 51
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 30
	binary:  expression AND.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 52
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 31
	binary:  expression OR.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 53
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 32
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 
	unary:  NOT expression.    (18)

	.  reduce 18 (src line 172)


state 33
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 
	unary:  MINUS expression.    (19)

	.  reduce 19 (src line 181)


state 34
	path:  path DOT.IDENTIFIER 

	IDENTIFIER  shift 54
	.  error


state 35
	array_index:  path LBRACKET.expression RBRACKET 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 55
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 36
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 
	primary:  LPAREN expression.RPAREN 

	RPAREN  shift 56
	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	EQ  shift 24
	NE  shift 25
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	AND  shift 30
	OR  shift 31
	.  error


state 37
	path:  DOT IDENTIFIER.    (25)

	.  reduce 25 (src line 202)


state 38
	path:  IDENTIFIER DOT.IDENTIFIER 

	IDENTIFIER  shift 57
	.  error


state 39
	call:  IDENTIFIER LPAREN.argument_list_opt RPAREN 
	argument_list_opt: .    (36)

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  reduce 36 (src line 300)

	expression  goto 60
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9
	argument_list  goto 59
	argument_list_opt  goto 58

state 40
	array_index:  IDENTIFIER LBRACKET.expression RBRACKET 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 61
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 41
	binary:  expression.PLUS expression 
	binary:  expression PLUS expression.    (5)
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	.  reduce 5 (src line 51)


state 42
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression MINUS expression.    (6)
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	.  reduce 6 (src line 62)


state 43
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression MULTIPLY expression.    (7)
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	.  reduce 7 (src line 71)


state 44
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression DIVIDE expression.    (8)
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	.  reduce 8 (src line 80)


state 45
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression MODULO expression.    (9)
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	.  reduce 9 (src line 89)


state 46
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression EQ expression.    (10)
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	.  reduce 10 (src line 98)


state 47
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression NE expression.    (11)
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	.  reduce 11 (src line 107)


state 48
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression LT expression.    (12)
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	.  reduce 12 (src line 116)


state 49
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression LE expression.    (13)
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	.  reduce 13 (src line 125)


state 50
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression GT expression.    (14)
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	.  reduce 14 (src line 134)


state 51
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression GE expression.    (15)
	binary:  expression.AND expression 
	binary:  expression.OR expression 

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	.  reduce 15 (src line 143)


state 52
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression AND expression.    (16)
	binary:  expression.OR expression 

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	EQ  shift 24
	NE  shift 25
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	.  reduce 16 (src line 152)


state 53
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 
	binary:  expression OR expression.    (17)

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	EQ  shift 24
	NE  shift 25
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	AND  shift 30
	.  reduce 17 (src line 161)


state 54
	path:  path DOT IDENTIFIER.    (26)

	.  reduce 26 (src line 210)


state 55
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 
	array_index:  path LBRACKET expression.RBRACKET 

	RBRACKET  shift 62
	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	EQ  shift 24
	NE  shift 25
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	AND  shift 30
	OR  shift 31
	.  error


state 56
	primary:  LPAREN expression RPAREN.    (24)

	.  reduce 24 (src line 196)


state 57
	path:  IDENTIFIER DOT IDENTIFIER.    (28)

	.  reduce 28 (src line 224)


state 58
	call:  IDENTIFIER LPAREN argument_list_opt.RPAREN 

	RPAREN  shift 63
	.  error


state 59
	argument_list_opt:  argument_list.    (37)
	argument_list:  argument_list.COMMA expression 

	COMMA  shift 64
	.  reduce 37 (src line 305)


state 60
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 
	argument_list:  expression.    (38)

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	EQ  shift 24
	NE  shift 25
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	AND  shift 30
	OR  shift 31
	.  reduce 38 (src line 311)


state 61
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 
	array_index:  IDENTIFIER LBRACKET expression.RBRACKET 

	RBRACKET  shift 65
	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	EQ  shift 24
	NE  shift 25
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	AND  shift 30
	OR  shift 31
	.  error


state 62
	array_index:  path LBRACKET expression RBRACKET.    (30)

	.  reduce 30 (src line 250)


state 63
	call:  IDENTIFIER LPAREN argument_list_opt RPAREN.    (29)

	.  reduce 29 (src line 233)


state 64
	argument_list:  argument_list COMMA.expression 

	IDENTIFIER  shift 18
	STRING  shift 13
	NUMBER  shift 14
	DOT  shift 17
	LPAREN  shift 12
	MINUS  shift 7
	NOT  shift 6
	TRUE  shift 15
	FALSE  shift 16
	.  error

	expression  goto 66
	primary  goto 5
	binary  goto 3
	unary  goto 4
	call  goto 10
	array_index  goto 11
	literal  goto 8
	path  goto 9

state 65
	array_index:  IDENTIFIER LBRACKET expression RBRACKET.    (31)

	.  reduce 31 (src line 259)


state 66
	binary:  expression.PLUS expression 
	binary:  expression.MINUS expression 
	binary:  expression.MULTIPLY expression 
	binary:  expression.DIVIDE expression 
	binary:  expression.MODULO expression 
	binary:  expression.EQ expression 
	binary:  expression.NE expression 
	binary:  expression.LT expression 
	binary:  expression.LE expression 
	binary:  expression.GT expression 
	binary:  expression.GE expression 
	binary:  expression.AND expression 
	binary:  expression.OR expression 
	argument_list:  argument_list COMMA expression.    (39)

	PLUS  shift 19
	MINUS  shift 20
	MULTIPLY  shift 21
	DIVIDE  shift 22
	MODULO  shift 23
	EQ  shift 24
	NE  shift 25
	LT  shift 26
	LE  shift 27
	GT  shift 28
	GE  shift 29
	AND  shift 30
	OR  shift 31
	.  reduce 39 (src line 316)


29 terminals, 12 nonterminals
40 grammar rules, 67/16000 states
2 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 172/240000
60 extra closures
347 shift entries, 1 exceptions
31 goto entries
140 entries saved by goto default
Optimizer space used: output 146/240000
146 table entries, 1 zero
maximum spread: 28, maximum offset: 64
